--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -65,6 +65,9 @@
     window.products = {};
   </script>
 {{ "font.css"  | asset_url | stylesheet_tag }}
+  <style type="text/css">
+  .wh-hidden{display: none;}.wh-cart-total, .wh-discount-info, .wh-extra-note {color: #000000;background-color: #FFFF4D;padding: 0px;}.wh-cart-total {font-weight: bold;display: inline-block;  margin-top: 5px;font-size: 22px;}.additional-notes{text-align:right;background-color: #FFFF4D;}
+</style>
 </head>
 
 <body class="{% if customer %}customer-logged-in{% endif %} template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}  {% if settings.blog-promo %}has-promo{% endif %} {% if settings.related-products and collection.products.size > 1 and template contains 'product' %}has-related-products-{{ settings.related-products-position }}{% endif %} {% if settings.product-hover == 'quick-shop' %}has-quick-shop{% endif %} loading" >
@@ -92,21 +95,8 @@
     {% endif %}
   {% else %}
     <div class="main-content">
-      {% if template contains 'wholesalertemplate' %}
-      {% if customer %}
-      {% if customer.tags contains 'Wholesaler' %}
       {{ content_for_layout }}
-      {% else %}
-      {% include 'wholesale-note' %}
-      {% endif %}
-      {% else %}
-      {% include 'wholesale-note' %}
-      {% endif %}
-      {% else%}
-      {{ content_for_layout }}
-{% endif %}
     </div>
-  
   {% endif %}
 
   {% include 'footer' %}
