--- a/snippets/bold-ro-price-fix.liquid
+++ b/snippets/bold-ro-price-fix.liquid
@@ -1,3 +1,5 @@
+{% if customer.tags.size > 0 %}
+{% else %}
 
 {% assign ro_price = 0 %}
 {% assign ro_item_price = 0 %}
@@ -13,4 +15,6 @@
   {% assign ro_item_price = item.price %}
   {% assign ro_line_item_price = item.line_price %}
   {% assign ro_cart_total = ro_cart_total | plus: item.line_price %}
+{% endif %}
+
 {% endif %}
