--- a/snippets/product-list-item.liquid
+++ b/snippets/product-list-item.liquid
@@ -1,4 +1,5 @@
 {% assign item = product %}
+{% include 'wh_calculate_discount' with item %}
 {% if template contains 'search' %}
   {% assign item = item %}
 {% elsif template contains 'product' %}
@@ -10,7 +11,6 @@
   {% assign threshold = settings.product-stock-level-overlay-threshold | times: 1 %}
   {% assign infinity = false %}
   {% for variant in item.variants %}
-{% include 'bold-hidden-variants' with variant, bold_loop: 'loop' %}
     {% if variant.inventory_management == null %}
       {% assign infinity = true %}
     {% elsif variant.inventory_management == '' %}
@@ -26,7 +26,7 @@
 {% endif %}
 
 <article class="product-list-item" id="product-list-item-{{ item.id }}" data-product-id="{{ item.id }}">
-
+  
   {% assign secondaryImage = false %}
   {% if item.images.size > 1 and settings.product-hover == 'image-flip' %}
     {% assign secondaryImage = true %}
@@ -37,8 +37,11 @@
       <img src="{{ item | img_url: 'grande' }}" alt="{{ item.featured_image.alt | escape }}" />
     </a>
 
+{% if customer.tags.size > 0 %}
+{% else %}
     {% if settings.product-hover == 'quick-shop' %}
       <span class="quick-shop-modal-trigger" data-product-handle="{{ item.handle }}" data-product-id="{{ item.id }}" data-variant-id="{{ item.selected_or_first_available_variant.id }}" data-vendor-url="{{ item.vendor | url_for_vendor }}">{{ 'products.product.quick_shop_trigger_text' | t }}</span>
+{% endif %}
 
     {% elsif settings.product-hover == 'stock-level' %}
 
@@ -51,7 +54,7 @@
     {% if settings.product-badges %}
       {% if item.available != true %}
         <span class="product-list-item-unavailable" data-title="{{ 'products.product.sold_out' | t }}"></span>
-      {% elsif bold_compare_at_price_min > bold_price_min %}
+      {% elsif wh_compare_at_price_min > wh_price_min and wh_discount_value == 1 and set_price == null %}
         <span class="product-list-item-on-sale" data-title="{{ 'products.product.on_sale' | t }}"></span>
       {% endif %}
     {% endif %}
@@ -63,15 +66,15 @@
     {% endif %}
     <h2 class="product-list-item-title"><a href="{{ item.url | within: collection }}">{{ item.title }}</a></h2>
     <p class="product-list-item-price">
-      {% if bold_price_varies %}
-        {% if bold_price_varies %}{{ 'products.product.from' | t }}{% endif %}
-        <span class="money">{{ bold_price_min | money }}</span>
+      {% if item.price_varies %}
+        {% if item.price_varies %}{{ 'products.product.from' | t }}{% endif %}
+        <span class="money">{{ wh_price_min | money }}</span>
       {% else %}
-        {% if bold_compare_at_price_min > bold_price_min %}
-          <span class="money">{{ bold_price_min | money }}</span>
-          <span class="original money">{{ bold_compare_at_price_min | money }}</span>
+        {% if wh_compare_at_price_min > wh_price_min %}
+          <span class="money">{{ wh_price_min | money }}</span>
+          <span class="original money">{{ wh_compare_at_price_min | money }}</span>
         {% else %}
-          <span class="money">{{ bold_price_min | money }}</span>
+          <span class="money">{{ wh_price_min | money }}</span>
         {% endif %}
       {% endif %}
     </p>
